force-app/main/default/objects/ucinn_ascendv2__Matching_Rule__c/ucinn_ascendv2__Matching_Rule__c.object-meta.xml
<CustomObject>
    <description>Represent matching rules for selected source and target object.</description>
    <label>Matching Rule</label>
    <nameField>
        <label>Matching Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matching Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>