force-app/main/default/objects/ucinn_ascendv2__Matching_Rule__c/fields/ucinn_ascendv2__Common_Threshold__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Common_Threshold__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Applied if there&apos;s no record under record type threshold</description>
    <label>Common Threshold</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>