force-app/main/default/objects/ucinn_ascendv2__Matching_Rule__c/fields/ucinn_ascendv2__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if this matching rule is active or not</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>