force-app/main/default/objects/ucinn_ascendv2__Matching_Rule__c/fields/ucinn_ascendv2__Is_Target_MK_On_Different_Object__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Target_MK_On_Different_Object__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Target MK On Different Object</label>
    <type>Checkbox</type>
</CustomField>