force-app/main/default/objects/ucinn_ascendv2__Matching_Rule__c/fields/ucinn_ascendv2__Source_Matching_Rule_2__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Source_Matching_Rule_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The second source matching rule user selected for this matching rule.</description>
    <label>Source Matching Rule 2</label>
    <referenceTo>ucinn_ascendv2__Matching_Key_Rule__c</referenceTo>
    <relationshipLabel>Matching Rules (Source Matching Rule 2)</relationshipLabel>
    <relationshipName>Matching_Rules_Source_Matching_Rule_2</relationshipName>
    <type>Lookup</type>
</CustomField>