force-app/main/default/objects/ucinn_ascendv2__Matching_Rule__c/fields/ucinn_ascendv2__Source_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Source_Object_Name__c</fullName>
    <description>Source object for the matching rule</description>
    <label>Source Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>