force-app/main/default/objects/ucinn_ascendv2__Matching_Rule__c/fields/ucinn_ascendv2__Target_Matching_Keys_2_Created_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Target_Matching_Keys_2_Created_Formula__c</fullName>
    <formula>ucinn_ascendv2__Target_Matching_Rule_2__r.ucinn_ascendv2__Key_Value_Set_Created__c</formula>
    <label>Target Matching Keys 2 Created</label>
    <type>Checkbox</type>
</CustomField>