force-app/main/default/objects/ucinn_ascendv2__Matching_Rule__c/fields/ucinn_ascendv2__Target_Matching_Rule_3__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Target_Matching_Rule_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicate the third matching key rule user selected.</description>
    <label>Target Matching Rule 3</label>
    <referenceTo>ucinn_ascendv2__Matching_Key_Rule__c</referenceTo>
    <relationshipLabel>Matching Rules (Target Matching Rule 3)</relationshipLabel>
    <relationshipName>Matching_Rules_Target_Matching_Rule_3</relationshipName>
    <type>Lookup</type>
</CustomField>